--- a/PartnerProject/index.html
+++ b/PartnerProject/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <p>Hi, My Name is Jeff Lehrman</p>
+      <p>Hi, My Name is Nicholas Storrs</p>
     </div>
   </body>
 </html>
