New paragraph in develop 2

--- a/PartnerProject/index.html
+++ b/PartnerProject/index.html
@@ -3,13 +3,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Updated itle from develop branch 2</title>
+    <title>Updated title from develop branch 2</title>
   </head>
   <body>
     <div>
       <p>Hi, My Name is Jeff Lehrman</p>
       <!-- master c1 -->
       <!-- master c2 -->
+      <p>I like pizza</p>
     </div>
   </body>
 </html>
